--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,7 +20,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css?family=Baloo" rel="stylesheet">
-    <title>React App</title>
+    <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
+    <title>Musimap</title>
   </head>
   <body>
     <noscript>
